force-app/main/default/objects/NCMT_RA_Quality_Code_Lookup__c/NCMT_RA_Quality_Code_Lookup__c.object-meta.xml
<CustomObject>
    <description>RA Default Building Systems</description>
    <label>RA Quality Code Lookup</label>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>RA Quality Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RA Quality Code Lookup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>