force-app/main/default/objects/NCMT_RA_Quality_Code_Lookup__c/fields/Dominant_Period__c.field-meta.xml
<CustomField>
    <fullName>Dominant_Period__c</fullName>
    <label>Dominant Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>19th Century</fullName>
            </value>
            <value>
                <fullName>1900 - 1940</fullName>
            </value>
            <value>
                <fullName>1940 - 1949</fullName>
            </value>
            <value>
                <fullName>1950 - 1979</fullName>
            </value>
            <value>
                <fullName>1980 - 1993</fullName>
            </value>
            <value>
                <fullName>1993 - Present</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>