force-app/main/default/objects/NCMT_RA_Quality_Code_Lookup__c/fields/Dominant_Roofing_Form__c.field-meta.xml
<CustomField>
    <fullName>Dominant_Roofing_Form__c</fullName>
    <label>Dominant Roofing Form</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Sloped, Metal</fullName>
            </value>
            <value>
                <fullName>Mansard</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Pedestrian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>