force-app/main/default/objects/NCMT_RA_Quality_Code_Lookup__c/fields/Dominant_Roofing_Material__c.field-meta.xml
<CustomField>
    <fullName>Dominant_Roofing_Material__c</fullName>
    <label>Dominant Roofing Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IRMA</fullName>
            </value>
            <value>
                <fullName>Membrane</fullName>
            </value>
            <value>
                <fullName>Built-up roof</fullName>
            </value>
            <value>
                <fullName>Clay tile</fullName>
            </value>
            <value>
                <fullName>Slate</fullName>
            </value>
            <value>
                <fullName>Concrete tile</fullName>
            </value>
            <value>
                <fullName>Metal panel</fullName>
            </value>
            <value>
                <fullName>Shingle</fullName>
            </value>
            <value>
                <fullName>Thick green</fullName>
            </value>
            <value>
                <fullName>Thin green</fullName>
            </value>
            <value>
                <fullName>Pedestrian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>