force-app/main/default/objects/NCMT_RA_Quality_Code_Lookup__c/fields/Dominant_structural_system__c.field-meta.xml
<CustomField>
    <fullName>Dominant_structural_system__c</fullName>
    <label>Dominant structural system</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Concrete Frame Selection</fullName>
            </value>
            <value>
                <fullName>Steel Frame Selection</fullName>
            </value>
            <value>
                <fullName>Light Frame Selection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>