force-app/main/default/objects/NCMT_RA_Quality_Code_Lookup__c/fields/Historic_Landmark_Status__c.field-meta.xml
<CustomField>
    <fullName>Historic_Landmark_Status__c</fullName>
    <label>Historic/Landmark Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Class 1</fullName>
            </value>
            <value>
                <fullName>Class 2</fullName>
            </value>
            <value>
                <fullName>Class 3</fullName>
            </value>
            <value>
                <fullName>Class 4</fullName>
            </value>
            <value>
                <fullName>Class 5</fullName>
            </value>
            <value>
                <fullName>Class 6</fullName>
            </value>
            <value>
                <fullName>Class 7</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>