force-app/main/default/objects/NCMT_RA_Quality_Code_Lookup__c/fields/Quality_Code_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Quality_Code_Parameter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Code Parameter</label>
    <referenceTo>NCMT_Quality_Code_Parameter__c</referenceTo>
    <relationshipName>RA_Def_Bldg_Sys_Parameters</relationshipName>
    <type>Lookup</type>
</CustomField>