force-app/main/default/objects/NCMT_RA_Quality_Code_Lookup__c/fields/Seismic__c.field-meta.xml
<CustomField>
    <fullName>Seismic__c</fullName>
    <label>Seismic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very Good</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Very Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>