force-app/main/default/objects/NCMT_RA_Quality_Code_Lookup__c/fields/Special_System__c.field-meta.xml
<CustomField>
    <fullName>Special_System__c</fullName>
    <label>Special System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ground source heat pumps</fullName>
            </value>
            <value>
                <fullName>Combined Heat &amp; Power (CHP)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>