force-app/main/default/objects/NCMT_RA_Quality_Code_Lookup__c/fields/Telecom_IT__c.field-meta.xml
<CustomField>
    <fullName>Telecom_IT__c</fullName>
    <label>Telecom / IT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outdated: limited infrastructure</fullName>
            </value>
            <value>
                <fullName>Current: primarily wired infrastructure</fullName>
            </value>
            <value>
                <fullName>Advanced; wireless and fiber</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>