force-app/main/default/objects/NCMT_RA_Quality_Code_Lookup__c/fields/Wet_Pipe__c.field-meta.xml
<CustomField>
    <fullName>Wet_Pipe__c</fullName>
    <label>Wet Pipe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Sprinklered, code compliant</fullName>
            </value>
            <value>
                <fullName>Fully Sprinklered, deficient</fullName>
            </value>
            <value>
                <fullName>Partially Sprinklered</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>