force-app/main/default/objects/NCMT_RA_Quality_Code_Lookup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dominant_Period__c</columns>
    <columns>Historic_Landmark_Status__c</columns>
    <columns>Quality_Code_Parameter__c</columns>
    <columns>Seismic__c</columns>
    <columns>Dominant_structural_system__c</columns>
    <columns>Elevator_Type__c</columns>
    <columns>Dominant_Roofing_Material__c</columns>
    <columns>Primary_System__c</columns>
    <columns>Dominant_Roofing_Form__c</columns>
    <columns>Wet_Pipe__c</columns>
    <columns>Dominant_Glazing_System1__c</columns>
    <columns>Dominant_Glazing_System2__c</columns>
    <columns>Dominant_Glazing_System3__c</columns>
    <columns>Telecom_IT__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>